fix z-index drop-down menu

--- a/src/main/resources/public/css/telenote.css
+++ b/src/main/resources/public/css/telenote.css
@@ -44,6 +44,7 @@ body{
   	width: 100%;
   	padding: 0px;
   	background-color: #414141;
+  	min-width: 500px;
 }
 
 @media only screen and (max-width: 840px) {
@@ -383,6 +384,7 @@ a:hover {
   margin: 9px 0;
   overflow: hidden;
   background-color: #f74e19;
+  z-index: 1;
 }
 
 #emptyList {
